Important Elasticsearch Configuration Complete