@@ -66,6 +66,105 @@
             - 충분한 힙 사이즈가 설정되어야 함
             - Xms와 Xmx 설정을 해주어야 한다.
                 - Minimum Heap Size, Maximum Heap Size
+            - ES가 사용할 수 있는 memory가 많을 수록 좋다.
+                - 하지만 GC발생시, 그만큼의 pause시간이 길어질 수 있다.
+            - Xmx 설정시, Physical RAM의 50% 이하로 설정하여 테스트
+            - Xmx 설정시, cutoff 보다 높게 설정하지 말 것
+                - cutoff size는 약 32GB
+                - 해당 로그를 확인하여(compressed oops)를 확인할 수 있음
+                    ```
+                        heap size [1.9gb], compressed ordinary object pointers [true]
+                    ```
+                - oops에 대한 임계값 이하로 유지할 수 있도록 시도할 것
+                    - 제한 방법(JVM options)
+                        ```
+                        -XX:+UnlockDiagnosticVMOptions -XX:+PrintCompressedOopsMode
+                        ```
+                    - 로그 확인
+                        ```
+                        heap address: 0x000000011be00000, size: 27648 MB, zero based Compressed Oops
+                        ```
+                    - Zero-based compressed oops
+                        ```
+                        heap address: 0x0000000118400000, size: 28672 MB, Compressed Oops with base: 0x00000001183ff000
+                        ```
+                - compressed oops와 관련된 글 : [brunch](https://brunch.co.kr/@alden/35)
+                    - OOP(Ordinary Object Pointer)
+                        - Object에 접근하기 위한 메모리상의 주소
+                        - 32비트 기반에서 Heap영역이 4GB이상일때, Object를 가리킬 수 없는 문제,
+                            - 이를 극복하기 위해 Compressed OOP를 사용
+                        - 32비트로 사용하지만 4GB이상을 가리킬 수 있다.
+                        - Native OOP에 비해 8의 n배수, 8배 많은 주소공간 표현 가능
+                        - left shift 연산을 사용한다.
+                            ```
+                            native oop = (compressed oop << 3)
+                            ```
+                            - shift 연산은 상대적으로 빠름, CPU의 부하가 적다.
+                        - 이 때문에 32GB까지 원활하게 지원되나, 그 이상일 경우
+                            - 64bit기반의 OOP를 사용하게 된다.
+                                - 성능이 매우 떨어짐
+                        - Compressed OOP의 사용 시점 확인하기(임계치 확인)
+                            ```
+                            java -Xmx32766 -XX:+PrintFlagsFinal 2> /dev/null | grep UseCompressedOops
+                            ```
+                    - Zero Based Heap Memory
+                        - 64bit 시스템에서 Compressed OOP를 사용하는 시점이오면,
+                            - 운영체제에게 Heap영역의 시작주소를 0에서 부터 시작하도록 요청
+                            - 주소공간이 0부터 시작되면 shift연산이 필요 없음
+                                - 아닐 경우, shift 연산 + base 기반 덧셈 연산 -> 주소 변환 부하 증가
+                        - zero base 임계치는 JAVA_OPTS를 설정하여 실행
+                    - 적당한 Heap Memory
+                        - 너무 작은 메모리의 경우 OOM 발생
+                        - 너무 큰 메모리의 경우, GC 발생시 긴 pause time 발생
+                        - Rule
+                            - 시스템 전체 메모리의 절반만 사용한다.
+                            - Compressed OOP를 사용할 수 있도록 32GB 이하로 사용
+                                - 테스트를 통해 Compressed OOP를 사용하는 임계치 확인 필요
+                            - Zero Base Compressed OOP를 사용할 수 있는 임계치 확인
+                    - 결론
+                        - 시스템 전체 메모리의 절반 이하
+                        - Zero based, Compressed OOP를 사용할 수 있는 임계치 보다는 낮은 값
+
+            - jvm.options file 설정
+                ```
+                -Xms2g
+                -Xmx2g
+                ```
+            - 환경변수로 설정하기
+                ```
+                ES_JAVA_OPTS="-Xms2g -Xmx2g" ./bin/elasticsearch 
+                ES_JAVA_OPTS="-Xms4000m -Xmx4000m" ./bin/elasticsearch 
+                ```
+        - JVM Heap dump path
+            - jvm.options 수정
+            ```
+            -XX:HeapDumpPath=...
+            ```
+            - 설정시 JVM에서 실행중인 인스턴스의 pid를 기반으로 Heap Dump File 생성
+            - 이름 지정시, 이미 존재하는 파일일 경우 heap dump가 실패할 수 있음
+        - GC logging
+            - jvm.options 에서 설정 가능
+            - default : 64M단위 순환, 최대 2G 용량
+            ```
+            ## GC configuration
+            -XX:+UseConcMarkSweepGC
+            -XX:CMSInitiatingOccupancyFraction=75
+            -XX:+UseCMSInitiatingOccupancyOnly
+            ```
+        - Temp Directory
+            - 기본적인 시스템 임시 디렉토리(/tmp)에 사용함
+            - 보관하려면, 따로 temp directory를 설정하여 관리하는 것이 좋음
+                - 단, elasticsearch를 사용하는 사용자만 설정하는 것이 좋음(권한 설정)
+            - $ES_TEMPDIR 환경변수를 설정
+        - JVM fatal error logs
+            - jvm.options
+                ```
+                -XX:ErrorFile-...
+                ```
+        
+
+
+
 
 
 
